--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     </div>
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/bank.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/bank.png" alt="" />
       <div class="content">
         <div class="tag">
           <h3>Banking Web App for Online Transactions</h3>
