--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 <!-- experience section ends -->
 
 <!-- contact section starts -->
-<!-- <section class="contact" id="contact">
+<section class="contact" id="contact">
   
   <h2 class="heading"><i class="fas fa-headset"></i> Get in <span>Touch</span></h2>
 
@@ -659,7 +659,7 @@
     </form>
   </div>
   </div>
-</section> -->
+</section>
 <!-- contact section ends -->
 
 
@@ -719,7 +719,7 @@
 
 <script
       type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     ></script>
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
