--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    ></script>
+</script>
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
