--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
             <a href="https://drive.google.com/file/d/1wS8myygKW0U1kHy6RZvze7ECGTqLddWv/view?usp=sharing" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
+            <br>
+            <br>
+            <br>
+            <a href="https://leetcode.com/u/subitshatlk2001/" target="_blank" class="btn"><span>Leetcode Profile</span>
+              <i class="fas fa-chevron-right"></i>
+          </a>
         </div>
 
     </div>
