--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hello!<br/> I'm Subitsha <span>T L K</span></h2>
+    <h2>Hello!<br/> I'm Subitsha</h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
